Java 17 support