@@ -47,13 +47,13 @@ The Initial Developer of the Covered Software is
     <productKeyPath/>
     <ee.license>-Dcom.tc.productkey.path=${productKeyPath}</ee.license>
     <!-- must not be a SNAPSHOT, pipeline checks for that -->
-    <container-test-framework.version>4.0.0</container-test-framework.version>
+    <container-test-framework.version>4.0.1</container-test-framework.version>
 
     <tc.tests.configuration.properties.file>${project.build.testOutputDirectory}/tc.tests.properties</tc.tests.configuration.properties.file>
     <tc.system.tests.properties>${project.build.testOutputDirectory}/com/tc/properties/tests.properties</tc.system.tests.properties>
 
     <cargo-maven2-plugin.version>1.9.13</cargo-maven2-plugin.version>
-    <tc.linked-child-process.version>2.0.0</tc.linked-child-process.version>
+    <tc.linked-child-process.version>2.0.1</tc.linked-child-process.version>
     <maven-appserver-plugin.version>1.0.5</maven-appserver-plugin.version>
     <tc.config>-Dtc.config=tc-config.xml</tc.config>
     <tc.base-dir>${project.build.directory}</tc.base-dir>
@@ -83,6 +83,11 @@ The Initial Developer of the Covered Software is
       -Dcom.sun.management.jmxremote
       ${ee.license}
       -Djdk.attach.allowAttachSelf
+      --add-opens java.base/java.lang=ALL-UNNAMED
+      --add-opens java.base/java.io=ALL-UNNAMED
+      --add-opens java.base/java.util=ALL-UNNAMED
+      --add-opens java.base/java.security=ALL-UNNAMED
+      --add-opens java.base/java.net=ALL-UNNAMED
     </surefire.argLine>
 
     <!--
@@ -155,7 +160,7 @@ The Initial Developer of the Covered Software is
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
     </dependency>
     <!-- This isn't published and external things use this project as a parent
     <dependency>
